# FilesRPG

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  Doxyfile.in  README.md  yokim.cfg
apps/game_launcher/: CMakeLists.txt  hello.c  main.c
include/: citizen.h  the_eye.h
src/citizen/: CMakeLists.txt  citizen.c
src/the_eye/: CMakeLists.txt  the_eye.c
tests/: CMakeLists.txt
