# ==============================================================================
# Yokim Gold Standard v4.0
# Module  : tests
# Brief   : Test suite (add test files here as you go)
# ==============================================================================

# Tests will be added in Sprint 3.
# Uncomment below when you have test source files:
#
# file(GLOB TEST_SOURCES CONFIGURE_DEPENDS
#     "${CMAKE_CURRENT_SOURCE_DIR}/*.c"
# )
#
# if(TEST_SOURCES)
#     add_executable(run_tests ${TEST_SOURCES})
#     target_link_libraries(run_tests PRIVATE the_eye citizen yklib)
#     target_include_directories(run_tests PRIVATE ${CMAKE_SOURCE_DIR}/include)
#     enable_testing()
#     add_test(NAME FilesRPGTests COMMAND run_tests)
# endif()
